# Growth-and-Remodeling-in-FEniCSx

./: Dockerfile  LICENSE  README.md  pyproject.toml  reproduce_figures.py
.github/workflows/: docker-image.yml  reproduce-results.yml
GrowthLaws/: GEG.py  KOM.py  comparison_script.py
Plots/: 10p_stretch_crossfiber.json  10p_stretch_crossfiber_GCG.json  10p_stretch_crossfiber_KFR.json
examples/: GCG.py  GEG.py  KFR.py  KOM.py  LT2.py  comparison_script.py  simulation_results_comparison.txt
helper/: ddf.py  geometry.py  growth_laws.py  hyperelastic_models.py
src/fenicsx_growth/: __init__.py  ddf.py  geometry.py  growth_laws.py  hyperelastic_models.py  postprocessing.py
