[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fenicsx-growth"
version = "1.0.0"
description = "Supplementary code for the paper 'Growth and Remodelling Package in FEniCSx'"
authors = [{name = "Karl Munthe", email = "karlfredrik@simula.no"}]
license = {text = "MIT"}
dependencies = [
    "matplotlib",
]
keywords = ["cardiac mechanics", "growth", "remodelling", "FEniCSx"]

[project.readme]
file = "README.md"
content-type = "text/markdown"